improve style on desktop version

--- a/static/styles/about.scss
+++ b/static/styles/about.scss
@@ -1,9 +1,11 @@
+@import "common";
+
 .about {
-  margin: 3.5rem 2rem;
-  padding: 3rem 2rem;
+  margin: $header-height $space-8 0;
+  padding: $space-12 $space-8 $space-8;
 
   &__title {
-    padding-left: 2rem;
+    padding-left: $space-8;
     text-align: left;
     text-transform: uppercase;
 
@@ -17,10 +19,10 @@
   }
 
   &__column {
-    padding: 2rem;
+    padding: $space-8;
 
     h4 {
-      color: #ff9900;
+      color: $covid-organge;
       text-align: left;
     }
   }
@@ -30,7 +32,7 @@
     text-align: justify;
 
     a {
-      color: #ff9900;
+      color: $covid-organge;
       font-weight: bold;
       text-decoration: none;
 
@@ -44,8 +46,8 @@
 @media (max-width: 750px) {
 
   .about {
-    margin: 3.5rem 0 1rem;
-    padding: 2rem 0.5rem;
+    margin: $header-height 0 $space-4;
+    padding: $space-8 $space-2;
 
     &__title {
       font-size: 6vw;
