--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block title %}{{ _('about.block-title') }}{% endblock %}
 
 {% block content %}
-{% include "snippets/back-button/back-button.html" %}
+{% include "snippets/back-button.html" %}
 <div class="about">
   <div class="about__title">
     <h2>{{ _('about.title') }}</h2>
