--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         {% block content %}
         {% endblock %}
       </div>
-      {% include "snippets/footer/footer.html" %}
+      {% include "snippets/footer.html" %}
     </div>
   </body>
 </html>
