--- a/templates/results.html
+++ b/templates/results.html
@@ -3,7 +3,7 @@
 {% block title %}{{ _('results.block-title') }}{% endblock %}
 
 {% block content %}
-{% include "snippets/home-button/home-button.html" %}
+{% include "snippets/home-button.html" %}
 <div class="content results">
   <h1 class="results__title">
     {{ _('results.title') }}
