--- a/static/styles/footer.scss
+++ b/static/styles/footer.scss
@@ -1,18 +1,23 @@
+@import "common";
+
 .footer {
+  background-color: #191919;
+  border-top: 2px solid $covid-gray;
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
-  height: 2rem;
+  height: $space-9;
   justify-content: center;
   margin-top: auto;
+  padding-top: $space-4;
   width: 100%;
 
   &__link {
-    color: #fff;
+    color: $covid-white;
     text-decoration: none;
 
     &:hover {
-      color: #ff9900;
+      color: $covid-organge;
       text-decoration: underline;
     }
   }
@@ -25,21 +30,21 @@
 @media (max-width: 800px) {
   .footer {
     background-color: #191919;
-    border-top: 2px solid #666;
+    border-top: 2px solid $covid-gray;
     flex-direction: column;
     height: 7rem;
-    padding-top: 0.75rem;
+    padding-top: $space-3;
 
     &__separator {
       display: none;
     }
 
     &__link {
-      margin: 0.25rem;
+      margin: $space;
     }
 
     &__copyright {
-      margin: 0.25rem 0 0.75rem;
+      margin: $space 0 $space-3;
     }
   }
 }
