--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -1,10 +1,12 @@
+@import "common";
+
 .login {
   &__label {
-    margin-top: 2rem;
+    margin-top: $space-8;
   }
 
   &__button {
-    margin: 1rem auto;
+    margin: $space-4 auto;
     position: relative;
     width: 50%;
 
@@ -15,22 +17,22 @@
 
   &__error {
     background-color: #C54842;
-    color: #fff;
+    color: $covid-white;
     font-size: 16px;
     font-weight: bold;
-    padding: 0.25rem 1rem;
+    padding: $space $space-4;
     text-align: left;
-    margin: 0 0.25rem;
+    margin: 0 $space;
     visibility: hidden
   }
   
   &__terms {
-    margin: 2rem 1rem 1rem;
+    margin: $space-8 $space-4 $space-4;
     font-size: 14px;
 
     &__checkbox {
-      width: 1rem;
-      height: 1rem;
+      width: $space-4;
+      height: $space-4;
     }
   }
 }
@@ -38,22 +40,22 @@
 @media (max-width: 750px) {
 
   .login {
-    padding: 1rem;
+    padding: $space-4;
 
     &__label {
-      margin-top: 3rem;
+      margin-top: $space-12;
       font-size: 5.8vw;
     }
 
     &__button {
-      margin: 1.5rem auto;
+      margin: $space-6 auto;
       width: unset;
     }
 
     &__error {
       font-size: 4vw;
       margin: 0;
-      padding: 0.25rem 0.25rem 0.25rem 0.5rem;
+      padding: $space $space $space $space-2;
     }
 
     &__terms {
@@ -62,13 +64,13 @@
       align-items: center;
   
       &__checkbox {
-        width: 1rem;
-        height: 1rem;
+        width: $space-4;
+        height: $space-4;
       }
 
       label {
         font-size: 4.4vw;
-        margin-left: 0.25rem;
+        margin-left: $space;
       }
     }
   }
