--- a/static/styles/start.scss
+++ b/static/styles/start.scss
@@ -1,12 +1,14 @@
+@import "common";
+
 .start {
   &__title {
-    color: #ff9900;
+    color: $covid-organge;
     text-transform: uppercase;
   }
 
   &__user-speciality {
     button {
-      margin: 0.5rem auto;
+      margin: $space-2 auto;
     }
   }
 
@@ -15,7 +17,7 @@
     width: 50%;
 
     select {
-      margin-bottom: 1rem;
+      margin-bottom: $space-4;
       width: 100%;
     }
 
@@ -25,7 +27,7 @@
   }
 
   &__button {
-    margin: 1rem auto;
+    margin: $space-4 auto;
     position: relative;
     width: 50%;
 
@@ -36,7 +38,7 @@
 
   &__error {
     background-color: #C54842;
-    color: #fff;
+    color: $covid-white;
     font-size: 12px;
     font-weight: bold;
     left: 3px;
@@ -45,9 +47,10 @@
   }
 
   &__logout {
+    color: $covid-clear-gray;
     font-size: 14px;
     a {
-      color: #ff9900;
+      color: $covid-organge;
       text-decoration: none;
 
       &:hover {
@@ -59,7 +62,7 @@
 
 @media (max-width: 750px) {
   .start {
-    padding: 1rem;
+    padding: $space-4;
 
     &__title {
       font-size: 9.2vw;
@@ -74,7 +77,7 @@
       width: 100%;
 
       select {
-        margin-bottom: 0.5rem;
+        margin-bottom: $space-2;
       }
     }
 
@@ -83,11 +86,10 @@
     }
 
     &__logout {
-      color: #d9d9d9;
       font-size: 3.75vw;
 
       strong {
-        color: #fff;
+        color: $covid-white;
       }
     }
   }
