--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block content %}
-{% include "snippets/back-button/back-button.html" %}
+{% include "snippets/back-button.html" %}
   <div class="content login">
-    {% include "snippets/avatar/avatar.html" %}
+    {% include "snippets/avatar.html" %}
     <div class="login__label">
       {{ _('login.label') }}
     </div>
