--- a/templates/not-found.html
+++ b/templates/not-found.html
@@ -2,7 +2,7 @@
 {% block title %}{{ _('not-found.block-title') }}{% endblock %}
 
 {% block content %}
-{% include "snippets/back-button/back-button.html" %}
+{% include "snippets/back-button.html" %}
   <div class="content not-found">
     <div class="not-found__title">
       <p class="error">
