--- a/static/styles/home-button.scss
+++ b/static/styles/home-button.scss
@@ -23,7 +23,7 @@
   &__wrapper {
     align-items: center;
     background-color: $covid-dark-gray;
-    border-bottom: 1px solid $covid-gray;
+    border-bottom: 2px solid $covid-gray;
     display: flex;
     height: 3.5rem;
     left: 0;
@@ -47,5 +47,9 @@
 @media (max-width: 750px) {
   .home-button {
     padding: 0;
+
+    &__wrapper {
+      border-bottom-width: 1px;
+    }
   }
 }
